<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:icon="@drawable/ic_home"
    android:enabled="true"
    android:id="@+id/homeicon"
    android:title="Home"/>
    <item
        android:icon="@drawable/ic_search"
        android:enabled="true"
        android:id="@+id/serachicon"
        android:title="Search"/>
    <item
        android:icon="@drawable/ic_more"
        android:enabled="true"
        android:id="@+id/settingsicon"
        android:title="Settings"/>
</menu>